--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
       "email": "ssmalo2@gmail.com"
     },
     {
-      "name": "Group Member Two",
-      "email": "email@group.com"
+      "name": "Jessica Lessev",
+      "email": "u13049136@tuks.com"
     },
     {
       "name": "Group member n",
