--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
       "email": "u13049136@tuks.com"
     },
     {
-      "name": "Group member n",
-      "email": "n@email.com"
+      "name": "Armand Pieterse",
+      "email": "u12167844@tuks.co.za"
     },
     {
       "name": "Group member n",
