Name was added to file.

--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
       "email": "u12167844@tuks.co.za"
     },
     {
-      "name": "Group member n",
-      "email": "n@email.com"
+      "name": "Kale-ab Tessera",
+      "email": "kaleabtessera@email.com"
     }
   ],
 }
